refactor: make use of MultiDbTest in test
 * Introduce MultiDb into new test
 * Make use of Authentication and define user